test_name: Compra e2e
description: Testa a funcionalidade de compra e2e do aplicativo

appId: com.qazandoqafood
---
- launchApp
- tapOn:
    id: "email"
- inputText: teste@teste.com
- tapOn:
    id: "password"
- inputText: 123456
- tapOn:
    id: "android:id/input_method_nav_back"
- tapOn:
    id: "login-button"
- tapOn: "Selecione seu endereço..."
- tapOn:
    id: "android:id/button1"
- tapOn: "Pastelaria da Maria"
- tapOn:
    id: "item-title"
    index: 0
- tapOn:
    id: "add-item-buttom"
    index: 0
- tapOn:
    id: "open-cart-button"
- tapOn:
    id: "confirm-order-button"
- scroll
- tapOn: "Dinheiro"
- tapOn:
    id: "do-order-button"
- assertVisible: "Pedido realizado"